# kbtransfer

./: .gitignore  02-v0.1.1-dogfood-report.md  LICENSE.md  OVERVIEW.md  README.md  REGISTRY_API_NOTES.md  ROADMAP-v2.md  ROADMAP.md  autoevolve-spec-v0.1.1.md  pyproject.toml
.github/workflows/: release.yml
examples/: README.md
examples/sample-registry/: README.md
examples/sample-registry-http/: Dockerfile  README.md  app.py  docker-compose.yml
examples/sample-registry/.github/workflows/: verify-pack.yml
examples/sample-registry/scripts/: verify_submission.py
examples/skills/kb-distill/: README.md  SKILL.md
examples/skills/kb-distill-adversarial/: OLLAMA-INTEGRATION.md  README.md  SKILL.md
reference/: README.md
reference/kb_cli/: README.md  __init__.py  __main__.py  cli.py  init.py  keygen.py
reference/kb_cli/templates/: gitignore
reference/kb_cli/templates/kb/: schema.yaml  trust-store.yaml
reference/kb_cli/templates/kb/policy/: enterprise.yaml  individual.yaml  team.yaml
reference/kb_cli/templates/wiki/: index.md  log.md
reference/kb_cli/templates/wiki/decisions/: README.md
reference/kb_cli/templates/wiki/entities/: README.md
reference/kb_cli/templates/wiki/failure-log/: README.md
reference/kb_cli/templates/wiki/patterns/: README.md
reference/kb_distiller/: __init__.py  family.py  pipeline.py  scrubber.py
reference/kb_mcp_server/: README.md  __init__.py  __main__.py  envelope.py  kb_root.py  publisher_context.py  server.py  subscription_fs.py  trust_store.py
reference/kb_mcp_server/tools/: __init__.py  distill.py  draft_pack.py  identity.py  ingest_source.py  lint.py  policy_get.py  policy_set.py  publish.py  read.py  registry_describe.py  registry_mirror.py  registry_resolve.py  registry_search.py  registry_submit.py  search.py  subscribe.py  trust_add.py  unsubscribe.py  verify.py  verify_all.py  write.py
reference/kb_pack/: __init__.py  attestation.py  build.py  canonical.py  dependency.py  did.py  lock.py  manifest.py  merkle.py  signature.py  verify.py
reference/kb_registry/: __init__.py  index.py  registry.py  semver.py
reference/kb_registry_server/: __init__.py  server.py  validation.py
reports/: 01-v0.1-dogfood-feedback.md  03-dep-chain-report.md  04-phase1-dogfood-report.md  05-phase2-dogfood-report.md  06-phase3-dogfood-report.md  07-rfc0002-registry-submit.md  full-cycle-dogfood-2026-04-15.md  skill-3a-distiller-single-model.md  skill-3b-distiller-dual-model.md
rfcs/: 0001-https-transport.md  0002-registry-submit.md  0003-did-web-resolution.md  0004-rfc3161-timestamping.md  0005-federation-trust.md  0006-revocation.md
specs/current/: autoevolve-registry-spec-v0.1.md
tests/: README.md  test_auto_push.py  test_cli_smoke.py  test_distiller.py  test_distiller_family.py  test_distiller_skill.py  test_handler_set.py  test_init.py  test_kb_pack_did.py  test_mcp_pack_lifecycle.py  test_mcp_registry_tools.py  test_mcp_tools.py  test_pack_build_verify.py  test_pack_core.py  test_registry.py  test_registry_submit.py  test_sample_registry_http.py  test_unsubscribe.py
tests/adversarial/: test_d1_d6.py  test_d8_submit_abuse.py  test_distiller_skill_canary.py  test_t1_t8.py
tests/integration/: test_phase1_e2e.py  test_stdio_smoke.py
